--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon index.js",
+		"start": "nodemon ./src/index.js",
 		"router": "nodemon router.js"
 	},
 	"keywords": [],
